Fix collapse button and added logout button

--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,13 +1,1 @@
 /* You can add global styles to this file, and also import other style files */
-
-nav {
-    background: rgb(106, 15, 18);
-}
-
-.nav-text {
-    color: white !important;
-}
-
-.logo {
-    height: 80px;
-}
